# haptiquad_contacts

./: CMakeLists.txt  README.md  package.xml
assets/: anymal_base_collisionbox_united.stl
config/: contact_estimator.yaml  contact_estimator_gt.yaml  contacts.rviz
include/haptiquad_contacts/: contact_estimator.hpp
launch/: haptiquad_estimator_mujoco.launch.py
scripts/: contact_error_plotter.py  model_publisher.py  mujoco_contact_publisher.py
src/: contact_estimator.cpp
